--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -60,4 +60,4 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: '*.jar'  # 다운로드한 JAR 파일을 배포
+          package: 'build/libs/project-0.0.1-SNAPSHOT.jar'  # 다운로드한 JAR 파일을 배포
