--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -56,6 +56,10 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: java-app
+          path: '.'  # 현재 디렉토리에 다운로드
+
+      - name: List downloaded files
+        run: ls -la  # 다운로드된 파일 확인
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -63,4 +67,4 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: 'java-app/*.jar'  # 다운로드한 JAR 파일을 배포
+          package: '*.jar'  # 현재 디렉토리의 JAR 파일을 배포
