--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -67,4 +67,4 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: '*.jar'  # 현재 디렉토리의 JAR 파일을 배포
+          package: 'project-0.0.1-SNAPSHOT.jar'  # 현재 디렉토리의 JAR 파일을 배포
