--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=project
-server.port=9090
+server.port=80
 
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/tododiary
-spring.datasource.username = root
+spring.datasource.url=jdbc:mysql://taskmanager-db.mysql.database.azure.com:3306/tododiary
+spring.datasource.username=root@taskmanager-db
 spring.datasource.password = 0000
 
 spring.jpa.show-sql=true
