--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=project
 server.port=9090
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://taskmanager-db.mysql.database.azure.com:3306/tododiary?useSSL=true
-spring.datasource.username=root@taskmanager-db
-spring.datasource.password=0000
+spring.datasource.url=jdbc:mysql://taskmanager-database:3306/tododiary?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=yukyeong
+spring.datasource.password=hyk9060@
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
@@ -13,6 +13,3 @@ spring.jpa.hibernate.ddl-auto=none
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
-
-# Optional: Increase connection timeout if needed
-spring.datasource.hikari.connectionTimeout=30000
