--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=project
 server.port=9090
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://taskmanager-database:3306/tododiary?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://taskmanager-database.mysql.database.azure.com:3306/tododiary?useSSL=true
 spring.datasource.username=yukyeong
 spring.datasource.password=hyk9060@
 
