--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=project
 server.port=9090
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://taskmanager-database.mysql.database.azure.com:3306/tododiary?useSSL=true
+spring.datasource.url=jdbc:mysql://taskmanager-database.mysql.database.azure.com:3306/tododiary?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=yukyeong
 spring.datasource.password=hyk9060@
 
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+sspring.jpa.hibernate.ddl-auto=update
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
