--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,15 @@ server.port=9090
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://taskmanager-database.mysql.database.azure.com:3306/tododiary?serverTimezone=UTC&characterEncoding=UTF-8
+
 spring.datasource.username=yukyeong
-spring.datasource.password=hyk9060@
+spring.datasource.password=hyk9060%40
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-sspring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
+
+spring.lifecycle.enabled=false
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
