--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.application.name=project
-server.port=80
+server.port=9090
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://taskmanager-database.mysql.database.azure.com:3306/tododiary?serverTimezone=UTC&characterEncoding=UTF-8
 
-
 spring.datasource.username=yukyeong
-spring.datasource.password=hyk9060%40
+spring.datasource.password=hyk9060@
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
