--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,11 @@ spring.application.name=project
 server.port=9090
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://taskmanager-database.mysql.database.azure.com:3306/tododiary?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://taskmanager-database.mysql.database.azure.com:3306/tododiary?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 spring.datasource.username=yukyeong
 spring.datasource.password=hyk9060@
